==> Luos-io/luos_engine/network/robus_network/HAL/ATSAMD21_ARDUINO/robus_hal.c <==
#include "robus_hal.h"
#include "luos_hal.h"
#include <stdbool.h>
#include "reception.h"
#include "context.h"
#define DEFAULT_TIMEOUT 30
#define TIMEOUT_ACK     DEFAULT_TIMEOUT / 4

void RobusHAL_ComInit(uint32_t Baudrate)
{
    uint32_t baud = 0;
    // initialize clock
    LUOS_COM_CLOCK_ENABLE();

    /* Disable the USART before configurations */
    LUOS_COM->USART.CTRLA.reg &= ~SERCOM_USART_CTRLA_ENABLE;

    /* Configure Baud Rate */
    baud                     = 65536 - ((uint64_t)65536 * 16 * Baudrate) / MCUFREQ;
    LUOS_COM->USART.BAUD.reg = SERCOM_USART_BAUD_BAUD(baud);

    // Configures USART Clock Mode/ TXPO and RXPO/ Data Order/ Standby Mode/ Sampling rate/ IBON
    LUOS_COM->USART.CTRLA.reg = SERCOM_USART_CTRLA_MODE_USART_INT_CLK | SERCOM_USART_CTRLA_RXPO(COM_RX_POS)
                                | SERCOM_USART_CTRLA_TXPO(COM_TX_POS) | SERCOM_USART_CTRLA_DORD
                                | SERCOM_USART_CTRLA_IBON | SERCOM_USART_CTRLA_FORM(0x0)
                                | SERCOM_USART_CTRLA_SAMPR(0);

    // Configures RXEN/ TXEN/ CHSIZE/ Parity/ Stop bits
    LUOS_COM->USART.CTRLB.reg = SERCOM_USART_CTRLB_CHSIZE(0) | SERCOM_USART_CTRLB_SBMODE
                                | SERCOM_USART_CTRLB_RXEN | SERCOM_USART_CTRLB_TXEN
                                | SERCOM_USART_CTRLB_SFDE;

    /* Enable the UART after the configurations */
    LUOS_COM->USART.CTRLA.reg |= SERCOM_USART_CTRLA_ENABLE;

    /* Wait for sync */
    while (LUOS_COM->USART.SYNCBUSY.bit.ENABLE)
        ;

    /* Clean IT */
    LUOS_COM->USART.INTENSET.reg = SERCOM_USART_INTENSET_RESETVALUE;

    /* Enable Receive Complete interrupt */
    LUOS_COM->USART.INTENSET.reg = SERCOM_USART_INTENSET_RXC;

    NVIC_SetPriority(LUOS_COM_IRQ, 3);
    NVIC_EnableIRQ(LUOS_COM_IRQ);

    // Timeout Initialization
    timoutclockcnt = MCUFREQ / Baudrate;
    RobusHAL_TimeoutInit();

#ifndef USE_TX_IT
    LUOS_DMA_CLOCK_ENABLE();

    LUOS_DMA->BASEADDR.reg        = (uint32_t)&descriptor_section;
    LUOS_DMA->WRBADDR.reg         = (uint32_t)&write_back_section;
    LUOS_DMA->PRICTRL0.reg        = DMAC_PRICTRL0_LVLPRI0(1UL) | DMAC_PRICTRL0_RRLVLEN0 | DMAC_PRICTRL0_LVLPRI1(1UL) | DMAC_PRICTRL0_RRLVLEN1 | DMAC_PRICTRL0_LVLPRI2(1UL) | DMAC_PRICTRL0_RRLVLEN2 | DMAC_PRICTRL0_LVLPRI3(1UL) | DMAC_PRICTRL0_RRLVLEN3;
    LUOS_DMA->CHID.reg            = LUOS_DMA_CHANNEL; // DMA Channel
    LUOS_DMA->CHCTRLB.reg         = DMAC_CHCTRLB_TRIGACT(2) | DMAC_CHCTRLB_TRIGSRC(LUOS_DMA_TRIGGER) | DMAC_CHCTRLB_LVL(0);
    descriptor_section.BTCTRL.reg = DMAC_BTCTRL_BLOCKACT_INT | DMAC_BTCTRL_BEATSIZE_BYTE | DMAC_BTCTRL_VALID | DMAC_BTCTRL_SRCINC;
    LUOS_DMA->CTRL.reg            = DMAC_CTRL_DMAENABLE | DMAC_CTRL_LVLEN0 | DMAC_CTRL_LVLEN1 | DMAC_CTRL_LVLEN2 | DMAC_CTRL_LVLEN3;
#endif
}

_CRITICAL void RobusHAL_SetTxState(uint8_t Enable)
{
    if (Enable == true)
    {
        PORT->Group[COM_TX_PORT].PINCFG[COM_TX_PIN].reg = PORT_PINCFG_RESETVALUE; // no pin mux / no input /  no pull / low streght
        PORT->Group[COM_TX_PORT].PINCFG[COM_TX_PIN].reg |= PORT_PINCFG_PMUXEN;    // mux en
        if ((TX_EN_PIN != DISABLE) || (TX_EN_PORT != DISABLE))
        {
            PORT->Group[TX_EN_PORT].OUTSET.reg = (1 << TX_EN_PIN); // enable Tx
        }
    }
    else
    {
        PORT->Group[COM_TX_PORT].PINCFG[COM_TX_PIN].reg = PORT_PINCFG_RESETVALUE; // no pin mux / no input /  no pull / low streght
        PORT->Group[COM_TX_PORT].PINCFG[COM_TX_PIN].reg |= PORT_PINCFG_PULLEN;    // Enable Pull
        PORT->Group[COM_TX_PORT].OUTSET.reg = (1 << COM_TX_PIN);                  // Pull up
        if ((TX_EN_PIN != DISABLE) || (TX_EN_PORT != DISABLE))
        {
            PORT->Group[TX_EN_PORT].OUTCLR.reg = (1 << TX_EN_PIN); // disable Tx
        }
#ifdef USE_TX_IT
        // Stop current transmit operation
        data_size_to_transmit = 0;
        // Disable Transmission empty buffer interrupt
        LUOS_COM->USART.INTENCLR.reg = SERCOM_USART_INTENCLR_DRE; // disable IT
#else
        LUOS_DMA->CHCTRLA.reg &= ~DMAC_CHCTRLA_ENABLE;
#endif
        // Disable Transmission complete interrupt
        LUOS_COM->USART.INTENCLR.reg    = SERCOM_USART_INTENCLR_TXC; // disable IT
        LUOS_COM->USART.INTFLAG.bit.RXS = 1;                         // clear flag rx start
    }
}

_CRITICAL void RobusHAL_SetRxState(uint8_t Enable)
{
    if (Enable == true)
    {
        while ((LUOS_COM->USART.INTFLAG.reg & SERCOM_USART_INTFLAG_RXC) == SERCOM_USART_INTFLAG_RXC)
        {
            LUOS_COM->USART.DATA.reg;
        }
        LUOS_COM->USART.INTENSET.reg = SERCOM_USART_INTENSET_RXC;
    }
    else
    {
        LUOS_COM->USART.INTENCLR.reg = SERCOM_USART_INTENCLR_RXC;
    }
}

_CRITICAL void RobusHAL_ComTransmit(uint8_t *data, uint16_t size)
{
    while ((LUOS_COM->USART.INTFLAG.reg & SERCOM_USART_INTFLAG_DRE) != SERCOM_USART_INTFLAG_DRE)
        ;
    // Disable RX detec pin if needed

    // Reduce size by one because we send one directly
    data_size_to_transmit = size - 1;
    if (size > 1)
    {
        // Start the data buffer transmission
        // **** NO DMA
        // Copy the data pointer globally alowing to keep it and run the transmission.
        tx_data = data;
#ifdef USE_TX_IT
        // Send the first byte
        LUOS_COM->USART.DATA.reg = *(tx_data++);
        // Enable Transmission empty buffer interrupt to transmit next datas
        LUOS_COM->USART.INTENSET.reg = SERCOM_USART_INTENSET_DRE; // enable IT
        // Disable Transmission complete interrupt
        LUOS_COM->USART.INTENCLR.reg = SERCOM_USART_INTENCLR_TXC; // disable IT
#else
        data_size_to_transmit          = 0; // to not check IT TC during collision
        descriptor_section.SRCADDR.reg = (uint32_t)(data + size);
        descriptor_section.DSTADDR.reg = (uint32_t)&LUOS_COM->USART.DATA.reg;
        descriptor_section.BTCNT.reg   = size;
        // Enable TX
        RobusHAL_SetTxState(true);
        LUOS_DMA->CHCTRLA.reg |= DMAC_CHCTRLA_ENABLE;
        LUOS_COM->USART.INTENSET.reg = SERCOM_USART_INTENSET_TXC; // enable IT
#endif
    }
    else
    {
        // Wait before send ack
        data_size_to_transmit = 0;
        // This is a patch du to difference MCU frequency
        while (LUOS_TIMER->COUNT16.COUNT.reg < (0xFFFF - (timoutclockcnt * (DEFAULT_TIMEOUT - TIMEOUT_ACK))))
            ;
        // Enable TX
        RobusHAL_SetTxState(true);
        // Transmit the only byte we have
        LUOS_COM->USART.DATA.reg = *data;
        // Enable Transmission complete interrupt because we only have one.
        LUOS_COM->USART.INTENSET.reg = SERCOM_USART_INTENSET_TXC; // enable IT
    }
    RobusHAL_ResetTimeout(DEFAULT_TIMEOUT);
}

static void RobusHAL_TimeoutInit(void)
{
    // initialize clock
    LUOS_TIMER_LOCK_ENABLE();

    LUOS_TIMER->COUNT16.CTRLA.reg = TC_CTRLA_RESETVALUE;
    while ((LUOS_TIMER->COUNT16.STATUS.reg & TC_STATUS_SYNCBUSY))
        ;
    /* Configure counter mode & prescaler */
    LUOS_TIMER->COUNT16.CTRLA.reg            = TC_CTRLA_MODE_COUNT16 | TC_CTRLA_PRESCALER_DIV1 | TC_CTRLA_WAVEGEN_MPWM;
    LUOS_TIMER->COUNT16.CTRLBSET.bit.ONESHOT = 1;

    LUOS_TIMER->COUNT16.COUNT.reg = 0xFFFF - (timoutclockcnt * DEFAULT_TIMEOUT);
    /* Clear all interrupt flags */
    LUOS_TIMER->COUNT16.INTENSET.reg = TC_INTENSET_RESETVALUE;
    LUOS_TIMER->COUNT16.INTENSET.reg = TC_INTENSET_OVF;

    NVIC_SetPriority(LUOS_TIMER_IRQ, 3);
    NVIC_EnableIRQ(LUOS_TIMER_IRQ);
}

_CRITICAL void RobusHAL_ResetTimeout(uint16_t nbrbit)
{
    NVIC_ClearPendingIRQ(LUOS_TIMER_IRQ); // clear IT pending
    LUOS_TIMER->COUNT16.INTFLAG.bit.OVF = 1;
    LUOS_TIMER->COUNT16.CTRLA.reg &= ~TC_CTRLA_ENABLE;
    if (nbrbit != 0)
    {
        LUOS_TIMER->COUNT16.COUNT.reg = 0xFFFF - (timoutclockcnt * nbrbit);
        LUOS_TIMER->COUNT16.CTRLA.reg |= TC_CTRLA_ENABLE;
    }
}

static void RobusHAL_GPIOInit(void)
{
    uint32_t Position = 0;
    uint32_t Config   = 0;

    // Activate Clock for PIN choosen in RobusHAL
    PORT_CLOCK_ENABLE();

    if ((RX_EN_PIN != DISABLE) || (RX_EN_PORT != DISABLE))
    {
        /*Configure GPIO pins : RxEN_Pin */
        PORT->Group[RX_EN_PORT].PINCFG[RX_EN_PIN].reg = PORT_PINCFG_RESETVALUE; // no pin mux / no input /  no pull / low streght
        PORT->Group[RX_EN_PORT].PINCFG[RX_EN_PIN].reg |= PORT_PINCFG_DRVSTR;    // hight streght drive
        PORT->Group[RX_EN_PORT].DIRSET.reg = (1 << RX_EN_PIN);                  // Output
        PORT->Group[RX_EN_PORT].OUTCLR.reg = (1 << RX_EN_PIN);                  // disable Tx set output low
    }

    if ((TX_EN_PIN != DISABLE) || (TX_EN_PORT != DISABLE))
    {
        /*Configure GPIO pins : TxEN_Pin */
        PORT->Group[TX_EN_PORT].PINCFG[TX_EN_PIN].reg = PORT_PINCFG_RESETVALUE; // no pin mux / no input /  no pull / low streght
        PORT->Group[TX_EN_PORT].PINCFG[TX_EN_PIN].reg |= PORT_PINCFG_DRVSTR;    // hight streght drive
        PORT->Group[TX_EN_PORT].DIRSET.reg = (1 << TX_EN_PIN);                  // Output
        PORT->Group[TX_EN_PORT].OUTCLR.reg = (1 << TX_EN_PIN);                  // disable Tx set output low
    }

    /*Configure GPIO pins : TX_LOCK_DETECT_Pin */
    if ((TX_LOCK_DETECT_PIN != DISABLE) || (TX_LOCK_DETECT_PORT != DISABLE))
    {
        PORT->Group[TX_LOCK_DETECT_PORT].PINCFG[TX_LOCK_DETECT_PIN].reg = PORT_PINCFG_RESETVALUE; // no pin mux / no input /  no pull / low streght
        PORT->Group[TX_LOCK_DETECT_PORT].PINCFG[TX_LOCK_DETECT_PIN].reg |= PORT_PINCFG_INEN;      // enable input
        PORT->Group[TX_LOCK_DETECT_PORT].OUTSET.reg = (1 << TX_LOCK_DETECT_PIN);                  // pull up
        if (TX_LOCK_DETECT_IRQ != DISABLE)
        {
            PORT->Group[TX_LOCK_DETECT_PORT].PMUX[TX_LOCK_DETECT_PIN >> 1].reg |= (0 << (4 * (TX_LOCK_DETECT_PIN % 2)));
            if (TX_LOCK_DETECT_IRQ < 8)
            {
                Config   = 0;
                Position = TX_LOCK_DETECT_IRQ << 2;
            }
            else
            {
                Config   = 1;
                Position = (TX_LOCK_DETECT_IRQ - 8) << 2;
            }
            EIC->CONFIG[Config].reg &= ~(EIC_CONFIG_SENSE0_Msk << Position);   // reset sense mode
            EIC->CONFIG[Config].reg |= EIC_CONFIG_SENSE0_FALL_Val << Position; // Falling EDGE
            EIC->INTFLAG.reg  = (1 << TX_LOCK_DETECT_IRQ);                     // clear IT flag
            EIC->INTENCLR.reg = (1 << TX_LOCK_DETECT_IRQ);
        }
    }

    /*Configure GPIO pin : TxPin */
    PORT->Group[COM_TX_PORT].PINCFG[COM_TX_PIN].reg = PORT_PINCFG_RESETVALUE;                    // no pin mux / no input /  no pull / low streght
    PORT->Group[COM_TX_PORT].PINCFG[COM_TX_PIN].reg |= PORT_PINCFG_PULLEN;                       // Enable Pull
    PORT->Group[COM_TX_PORT].OUTSET.reg = (1 << COM_TX_PIN);                                     // Pull up
    PORT->Group[COM_TX_PORT].PMUX[COM_TX_PIN >> 1].reg |= (COM_TX_AF << (4 * (COM_TX_PIN % 2))); // mux to sercom

    /*Configure GPIO pin : RxPin */
    PORT->Group[COM_RX_PORT].PINCFG[COM_RX_PIN].reg = PORT_PINCFG_RESETVALUE;                    // no pin mux / no input /  no pull / low streght
    PORT->Group[COM_RX_PORT].PINCFG[COM_RX_PIN].reg |= PORT_PINCFG_PMUXEN;                       // mux en
    PORT->Group[COM_RX_PORT].PMUX[COM_RX_PIN >> 1].reg |= (COM_TX_AF << (4 * (COM_RX_PIN % 2))); // mux to sercom

    // configure PTP
    RobusHAL_RegisterPTP();
    for (uint8_t i = 0; i < NBR_PORT; i++) /*Configure GPIO pins : PTP_Pin */
    {
        // Setup PTP lines //Mux all PTP to EIC
        PORT->Group[PTP[NBR_PORT].Port].PMUX[PTP[NBR_PORT].Pin >> 1].reg |= (0 << (4 * (PTP[NBR_PORT].Pin % 2)));
        RobusHAL_SetPTPDefaultState(i);
    }

    NVIC_SetPriority(EIC_IRQn, 3);
    NVIC_EnableIRQ(EIC_IRQn);

    // Enable EIC interrupt
    EIC->CTRL.reg |= EIC_CTRL_ENABLE;
}

_CRITICAL void RobusHAL_SetPTPDefaultState(uint8_t PTPNbr)
{
    // configure the port in INPUT_PULLDOWN mode
    PORT->Group[PTP[PTPNbr].Port].PINCFG[PTP[PTPNbr].Pin].reg = PORT_PINCFG_RESETVALUE; // no pin mux / no input /  no pull / low streght
    PORT->Group[PTP[PTPNbr].Port].PINCFG[PTP[PTPNbr].Pin].reg |= PORT_PINCFG_PMUXEN;    // mux en
    PORT->Group[PTP[PTPNbr].Port].PINCFG[PTP[PTPNbr].Pin].reg |= PORT_PINCFG_PULLEN;    // pull en
    PORT->Group[PTP[PTPNbr].Port].OUTCLR.reg = (1 << PTP[PTPNbr].Pin);                  // pull down
    EIC->INTFLAG.reg                         = (1 << PTP[PTPNbr].Irq);                  // clear IT flag

    // attach the callback and enable interrupt on rising edge
    attachInterrupt(digitalPinToInterrupt(PTP_ll[PTPNbr]), RobusHAL_PinoutIRQHandler, RISING);
}

_CRITICAL void RobusHAL_SetPTPReverseState(uint8_t PTPNbr)
{
    // configure the port in INPUT_PULLDOWN mode
    PORT->Group[PTP[PTPNbr].Port].PINCFG[PTP[PTPNbr].Pin].reg = PORT_PINCFG_RESETVALUE; // no pin mux / no input /  no pull / low streght
    PORT->Group[PTP[PTPNbr].Port].PINCFG[PTP[PTPNbr].Pin].reg |= PORT_PINCFG_PMUXEN;    // mux en
    PORT->Group[PTP[PTPNbr].Port].PINCFG[PTP[PTPNbr].Pin].reg |= PORT_PINCFG_PULLEN;    // pull en
    PORT->Group[PTP[PTPNbr].Port].OUTCLR.reg = (1 << PTP[PTPNbr].Pin);                  // pull down
    EIC->INTFLAG.reg                         = (1 << PTP[PTPNbr].Irq);                  // clear IT flag

    // attach the callback and enable interrupt on falling edge
    attachInterrupt(digitalPinToInterrupt(PTP_ll[PTPNbr]), RobusHAL_PinoutIRQHandler, FALLING);
}

void RobusHAL_PushPTP(uint8_t PTPNbr)
{
    // Pull Down / Output mode
    detachInterrupt(digitalPinToInterrupt(PTP_ll[PTPNbr]));

    pinMode(PTP_ll[PTPNbr], OUTPUT);
    digitalWrite(PTP_ll[PTPNbr], HIGH);
}

uint8_t RobusHAL_GetPTPState(uint8_t PTPNbr)
{
    // Pull Down / Input mode
    detachInterrupt(digitalPinToInterrupt(PTP_ll[PTPNbr]));

    pinMode(PTP_ll[PTPNbr], INPUT_PULLDOWN);
    return digitalRead(PTP_ll[PTPNbr]);
}
